# china-stock-analyst

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  REVIEW_REPORT.md  SKILL.md  requirements.txt  test_plugins.py
.githooks/: pre-push
agents/: code-reviewer.md  stock-data-auditor.md  stock-event-hunter.md  stock-fundamental-expert.md  stock-identity-auditor.md  stock-industry-researcher.md  stock-macro-expert.md  stock-quant-flow-expert.md  stock-risk-expert.md  stock-technical-expert.md
assets/: 报告模板.md
config/: settings.json
desktop/: analysis_engine.py  config_manager.py  data_apis.py  data_fetcher.py  data_validator.py  llm_adapter.py  pyproject.toml  quant_flow.py  report_renderer.py  service.py  storage.py
desktop/scrapling_adapters/: base.py  eastmoney.py  sina.py  tencent.py  ths.py
desktop/tests/: test_analysis_engine.py  test_config_manager.py  test_data_apis.py  test_data_fetcher.py  test_data_validator.py  test_eastmoney_adapter.py  test_integration.py  test_llm_adapter.py  test_quant_flow.py  test_report_renderer.py  test_scrapling_adapters.py  test_scrapling_base.py  test_service.py  test_storage.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecars/: python.bat
src-tauri/src/: main.rs  sidecar.rs
src-tauri/ui/: index.html  package-lock.json  package.json  vite.config.ts
src-tauri/ui/src/: App.tsx  main.ts
src-tauri/ui/src/api/: sidecar.ts
src-tauri/ui/src/components/: Markdown.css  Markdown.tsx
src-tauri/ui/src/pages/: Analyzer.tsx  Dashboard.tsx  ReportViewer.tsx  Settings.tsx
(+46 files in other folders)
