[project]
name = "china-stock-analyst-desktop"
version = "0.1.0"
description = "Desktop sidecar for china-stock-analyst"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.0",
    "scrapling[fetchers]>=0.4.10",
    "pandas>=1.5.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]
