[package]
name = "china-stock-analyst-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Pin time to avoid a breaking API change in 0.3.52 that conflicts with
# cookie 0.18.1 in the offline crate cache.
time = "=0.3.51"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
